--- a/templates/index.html
+++ b/templates/index.html
@@ -3,59 +3,47 @@
 <html>
    <head>
       <meta charset="UTF-8">
-      <title>Price furniture prediction</title>
+      <title>Predict Agricultural Yield</title>
       <link rel="stylesheet" href="{{ url_for('static', path='style.css') }}">
    </head>
 
    <body>
       <div id="wrap">
-      <h1>Predict furniture price</h1>
+      <h1>Predict Agricultural Yield</h1>
 
       <section id="furn" class="frame2">
 
          <div class="login">
 
-            <form action="{{ url_for('predict')}}"method="post">
+            <form action="{{ url_for('predict')}}" method="post">
             <table class="entryForm">
 
             <tr>
             <th>Category：</th>
             <td>
-            <select id="category" name="category">
-               <option value="0">Bar furniture</option>
-               <option value="1">Beds</option>
-               <option value="2">Bookcases & shelving units</option>
-               <option value="3">Cabinets & cupboards</option>
-               <option value="4">Cafe furniture</option>
-               <option value="5">Chairs</option>
-               <option value="6">Chests of drawers & drawer units</option>
-               <option value="7">Children's furniture</option>
-               <option value="8">Nursery furniture</option>
-               <option value="9">Outdoor furniture</option>
-               <option value="10">Room dividers</option>
-               <option value="11">Sideboards, buffets & console tables</option>
-               <option value="12">Sofas & armchairs</option>
-               <option value="13">Tables & desks</option>
-               <option value="14">Trolleys</option>
-               <option value="15">TV & media furniture</option>
-               <option value="16">Wardrobes</option>
+            <select id="category" name="Culture Type">
+               <option value="0">Cereal</option>
+               <option value="1">Vegetables</option>
             </select>
             </td>
             </tr>
-
-            <tr>
-            <th>Sellable Online：</th>
+               <tr>
+            <th>Year：</th>
             <td>
-            <input type="radio" name="sellable_online" value="1" checked>Yes
-            <input type="radio" name="sellable_online" value="0">No
-            </td>
-            </tr>
-
-            <tr>
-            <th>Other color：</th>
-            <td>
-            <input type="radio" name="other_colors" value="1" checked>Yes
-            <input type="radio" name="other_colors" value="0">No
+            <select id="year" name="Year">
+               <option value="0">2025</option>
+               <option value="1">2026</option>
+               <option value="2">2027</option>
+               <option value="3">2028</option>
+               <option value="4">2029</option>
+               <option value="5">2030</option>
+               <option value="6">2031</option>
+               <option value="6">2032</option>
+               <option value="6">2033</option>
+               <option value="6">2034</option>
+               <option value="6">2035</option>
+               <option value="6">2036</option>
+            </select>
             </td>
             </tr>
 
