--- a/templates/index.html
+++ b/templates/index.html
@@ -21,9 +21,9 @@
             <tr>
             <th>Category：</th>
             <td>
-            <select id="category" name="Culture Type">
-               <option value="0">Cereal</option>
-               <option value="1">Vegetables</option>
+            <select id="category" name="Category">
+               <option value="cereal">Cereal</option>
+               <option value="vegetable">Vegetables</option>
             </select>
             </td>
             </tr>
@@ -45,21 +45,6 @@
                <option value="6">2036</option>
             </select>
             </td>
-            </tr>
-
-            <tr>
-            <th>Depth：</th>
-            <td><input type="text" name="depth" placeholder="Depth cm" required="required" />
-            </tr>
-
-            <tr>
-            <th>Length：</th>
-            <td><input type="text" name="height" placeholder="Height cm" required="required" />
-            </tr>
-
-            <tr>
-            <th>Width：</th>
-            <td><input type="text" name="width" placeholder="Width cm" required="required" />
             </tr>
 
             </table>
