--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,7 @@
          color: white;
          width: 500px;
          margin: auto;
+         margin-top: 20px
          text-align: center;
          font-size: 13px;
          letter-spacing: 1px;
