--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,13 @@
 <html>
    <head>
       <meta charset="UTF-8">
-      <title>Predict Agricultural Yield</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler-flags.min.css">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler-payments.min.css">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler-vendors.min.css">
       <link rel="stylesheet" href="{{ url_for('static', path='style.css') }}">
+      <title>Predict Agricultural Yield</title>
    </head>
 
    <body>
